# quartuspy

./: hotglue  pyproject.toml  tox.ini
pyquartus/: __init__.py  exceptions.py  project.py  pyquartus.py
pyquartus.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: demo.py  profiler.py  tests.py
wks/: buba.qpf  buba.qsf
wks/db/: buba.db_info
